--- a/src/components/editor/index.scss
+++ b/src/components/editor/index.scss
@@ -7,11 +7,11 @@
 ::-webkit-scrollbar-thumb {
   border-radius: 5px;
   box-shadow: inset 0 0 5px rgb(0 0 0 / 20%);
-  background: rgba(204,204,204,0.5);
+  background: rgba(204, 204, 204, 0.5);
 }
 ::-webkit-scrollbar-track {
   border-radius: 2px;
-  background: rgba(247,247,247,1);
+  background: rgba(247, 247, 247, 1);
 }
 
 .el-button,
@@ -31,11 +31,11 @@
     top: 0;
     bottom: 0;
   }
-  &-left{
+  &-left {
     left: 0;
     overflow: auto;
     background: #fff;
-    border: 1px solid rgba(31,56,88,.1);
+    border: 1px solid rgba(31, 56, 88, 0.1);
 
     .component-item {
       width: 250px;
@@ -49,7 +49,7 @@
       user-select: none;
       min-height: 100px;
       position: relative;
-      border: 1px solid rgba(31,56,88,.1);
+      border: 1px solid rgba(31, 56, 88, 0.1);
       border-radius: 4px;
 
       > span {
@@ -92,7 +92,7 @@
     justify-content: center;
     align-items: center;
     border: 1px solid rgba(31, 56, 88, 0.1);
-    background: #FFF;
+    background: #fff;
 
     .toolbar-item {
       font-size: 14px;
@@ -102,11 +102,11 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      background: rgba(0,0,0,0.3);
+      background: rgba(0, 0, 0, 0.3);
       color: #fff;
       user-select: none;
       cursor: pointer;
-      &+& {
+      & + & {
         margin-left: 3px;
       }
     }
@@ -121,7 +121,7 @@
       justify-content: center;
       display: flex;
 
-      .canvas-content{
+      .canvas-content {
         border-radius: 4px;
         position: relative;
         margin: 15px;
